--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed accusantium magni veniam quaerat modi. Corporis cum dicta est vitae iusto laborum autem quibusdam commodi deleniti suscipit, ea cumque voluptate nisi?</p>
+
     <div class="header">
+        <ul class="main-header">
+            <li>Home</li>
+            <li>About</li>
+            <li>Content</li>
+            <li>Service</li>
+        </ul>
+        <ul class="main-header">
+            <li>Home</li>
+            <li>About</li>
+            <li>Content</li>
+            <li>Service</li>
+        </ul>
         <ul class="main-header">
             <li>Home</li>
             <li>About</li>
